additional card information not displayed

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="import" href="sopro_components/group-manager/card-tray.html">
     <link rel="import" href="sopro_components/sopro-icon-button/sopro-icon-button.html">
 
+    <link rel="stylesheet" type="text/css" href="assets/plugins/font-awesome-4.1.0/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
   </head>
   <body unresolved ng-controller="appCtrl" tabindex="-1">
@@ -48,11 +49,11 @@
           -->
           <group-card-titlebar></group-card-titlebar>
           <card-tray id="cards" pattern="stream" tabindex="-1">
-            <group-card title="Voodoo"></group-card>
-            <group-card title="Hiro"></group-card>
-            <group-card title="Plato"></group-card>
-            <group-card title="Jon"></group-card>
-            <group-card title="Raf"></group-card>
+            <group-card title="Voodoo" type="Broadcast" number="48"></group-card>
+            <group-card title="Hiro" type="Cult" number="666"></group-card>
+            <group-card title="Plato" type="Anonymous" number="+9000"></group-card>
+            <group-card title="Jon" type="Broadcast" number="77"></group-card>
+            <group-card title="Raf" type="Broadcast" number="0"></group-card>
           </card-tray>
         </div>
         <paper-fab 
