--- a/sopro_components/group-manager/group-card-titlebar.html
+++ b/sopro_components/group-manager/group-card-titlebar.html
@@ -45,7 +45,7 @@ attributes="title editing"
       <titlebar-input 
       id="titleInput"
       block flex
-      label="Type a name for a New Group..."
+      label="Add Peer List...."
       value="{{title}}"
       on-input="{{titleInputChanged}}"
       tabindex="-1"
