--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </core-menu>
         </core-header-panel>
         <div class="mainTitle" tool>
-            SocietyPro Groups and Governance
+            Groups and Governance
         </div>
         <div id="listMorphButtons" tool horizontal layout>
           <sopro-icon-button 
@@ -165,6 +165,7 @@
     /*
     Useful to see what is going on while debugging changing focus with the tab
     key:
+
     window.setInterval(function(){
       console.log(document.activeElement);
     }, 5000);
