--- a/sopro_components/sopro-card/sopro-card.html
+++ b/sopro_components/sopro-card/sopro-card.html
@@ -7,7 +7,7 @@ attributes="">
       display: block;
       position: relative;
       background-color: white;
-      width: 100%;
+      /* width: 100%; Was breaking with padding/margin */
       font-size: 1.2rem;
       font-weight: 300;
     }
