--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="bower_components/platform/platform.js"></script>
     <script src="bower_components/japi/mocks/mockJapi.js" type="text/javascript"></script>
     <script src="bower_components/japi/js/japi.js" type="text/javascript"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
 
     <!--
     <script src="js/angular.js" type="text/javascript"></script>
@@ -165,10 +166,10 @@
     /*
     Useful to see what is going on while debugging changing focus with the tab
     key:
+    */
     window.setInterval(function(){
       console.log(document.activeElement);
     }, 5000);
-    */
 
   </script>
 </html>
