--- a/sopro_components/group-manager/group-card-titlebar.html
+++ b/sopro_components/group-manager/group-card-titlebar.html
@@ -1,6 +1,10 @@
 <link rel="import"
   href="../../bower_components/core-icons/core-icons.html">
 <link rel="import"
+  href="../../bower_components/core-dropdown/core-dropdown.html">
+<link rel="import"
+  href="../../bower_components/core-item/core-item.html">
+<link rel="import"
   href="../sopro-icon-button/sopro-icon-button.html">
 <link rel="import"
   href="./titlebar-input.html">
@@ -8,6 +12,8 @@
 <polymer-element 
 name="group-card-titlebar" 
 attributes="title editing"
+on-focus="{{onFocuses}}"
+on-blur="{{onBlurs}}"
 >
   <template>
     <style>
@@ -37,28 +43,62 @@ attributes="title editing"
       #titleInput{
         padding-left: 8px;
       }
+      #row2{
+        margin-top: 2px; /* fix overflowing over input's blue highlight */
+      }
+
+      core-dropdown #menu{
+        border-top: 1px solid rgba(0,0,0,0.25);
+      }
 
     </style>
 
-    <div id = "titleContainer" layout horizontal>
+    <div id = "titleContainer">
       <paper-shadow id="titleShadow" z="{{z}}" animated="true"></paper-shadow>
-      <titlebar-input 
-      id="titleInput"
-      block flex
-      label="Add Peer List...."
-      value="{{title}}"
-      on-input="{{titleInputChanged}}"
-      tabindex="-1"
-      >
-      </titlebar-input>
-      <sopro-icon-button 
-        id="titleButton"
-        icon="arrow-forward" 
-        on-click="{{fireCreate}}"
-        hidden?="{{!editing || !title}}"
-        tabindex="{{(editing && title) ? 0 : -1}}"
-        style="{{!title ? 'color: red' : '' }}"
-      ></sopro-icon-button>
+      <div id = "row1" layout horizontal>
+        <titlebar-input 
+          id="titleInput"
+          tabindex="-1"
+          block flex
+          label="Add Peer List...."
+          value="{{title}}"
+          on-input="{{titleInputChanged}}"
+          on-focus="{{onFocuses}}"
+          on-blur="{{onBlurs}}"
+        >
+        </titlebar-input>
+      </div>
+      <div id = "row2" layout horizontal>
+        <core-dropdown 
+          block 
+          layout flex
+          tabindex="0"
+          selected="Broadcast List" 
+          valueattr="label"
+          hidden?="{{!editing}}" 
+          on-core-select="{{typeSelected}}" 
+          on-focus="{{onFocuses}}"
+          on-blur="{{onBlurs}}"
+        >
+          <core-item
+            tabindex="-1"
+            on-focus="{{onFocuses}}"
+            on-blur="{{onBlurs}}"
+            label="Broadcast List"
+            title="Only the Group Owner can see members and send messages to his Broadcast List."
+          ></core-item>
+        </core-dropdown> 
+        <sopro-icon-button 
+          id="titleButton"
+          tabindex="{{(editing && title) ? 0 : -1}}"
+          icon="arrow-forward" 
+          hidden?="{{!editing || !title}}"
+          style="{{!title ? 'color: red' : '' }}"
+          on-click="{{fireCreate}}"
+          on-focus="{{onFocuses}}"
+          on-blur="{{onBlurs}}"
+        ></sopro-icon-button>
+      </div>
     </div>
   </template>
 
@@ -66,7 +106,7 @@ attributes="title editing"
     Polymer('group-card-titlebar', {
       publish: { // If you want to expose properties as tag attributes
         title: {value:null, reflect:true},
-        editing: false,
+        editing: {value:false, reflect:true},
         z: {value:"1", reflect:true},
       },
       titleInputChanged: function(e){
@@ -77,10 +117,48 @@ attributes="title editing"
         this.title = t.value;
         //console.log(e);
       },
+      onFocuses: function(e){
+        /*
+        console.log('focused', e);
+        this.editing = true;
+        this.z = 2;
+        e.stopPropagation();
+        */
+      },
+      onBlurs: function(e){
+        /*
+        if(this.contains(document.activeElement)){
+        } else {
+          if(this.title === null || this.title === ""){
+            this.editing = false;
+            this.z = 1;
+          }
+        }
+        console.log('blurred', e);
+        console.log(document.activeElement);
+        e.stopPropagation();
+        */
+      },
+      typeSelected: function(e){
+        console.log('typeSelected', e);
+        console.log(e.detail.item);
+      },
       attached: function(){
         // Save a reference to the group-card-titlebar for use in callbacks:
         var that = this;
 
+        $(this).on('focusin', function(){
+          console.log('focusin');
+          that.editing = true;
+          that.z = 2;
+        });
+        $(this).on('focusout', function(){
+          console.log('focusout');
+          if(that.title === null || that.title === ""){
+            that.editing = false;
+            that.z = 1;
+          }
+        });
         // Handle various keypresses that occur while the group-card-titlebar is focused:
         this.$.titleInput.addEventListener('keypress', function(e){
           if(that.title === null || that.title === ""){
@@ -96,18 +174,17 @@ attributes="title editing"
         });
 
         // Start editing on focus
-        this.$.titleInput.addEventListener('focus', function(e){
-          that.editing = true;
-          that.z = 2;
-        });
+        //this.$.titleInput.addEventListener('focus', onElFocused);
 
         // Stop editing on blur, but only if the input is blank.
+        /*
         this.$.titleInput.addEventListener('blur', function(e){
           if(that.title === null || that.title === ""){
             that.editing = false;
             that.z = 1;
           }
         });
+        */
       },
       fireCreate: function(){
         // Fire an event that tells the group-card index.html to instantiate a
@@ -115,8 +192,8 @@ attributes="title editing"
         this.$.titleInput.blur();
         this.fire('group-card-create', {cardtitle: this.title});
         this.title = "";
-        this.editing = false;
-        this.z = 1;
+        //this.editing = false;
+        //this.z = 1;
       },
     });
   </script>
