styling on quickadd box

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <material-content class="material-content-padding">
           <div id="groupQuickAddBox">
             <form style="padding-left:20px;">
-              <ig fid="a" class="material-input-group-theme-light"></ig>
+              <ig fid="a" class="material-input-group-theme-light" size="300"></ig>
             </form>
           </div>
           <div ng-show="listContains === 'myGroups'">
