add 'or id' to groupcards

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               </material-item>
             </material-list>
           </div>
-          
+          <div class="clearBoth"></div>
         </material-content>
       </div>
 
