remove material-content

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div layout="horizontal">
             <div class="material-toolbar-tools">
               <div class="menu-icon" ng-click="toggleMenu()" hide-md>
-                <material-icon icon="material-icons/icons/system_icons/navigation/res/1x_web/ic_menu_wht_48dp.png"></material-icon>
+                <img src="material-icons/icons/system_icons/navigation/res/1x_web/ic_menu_wht_48dp.png">
               </div>
               <h2>Groups & Governance</h2>
             </div>
