--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
     <script src="bower_components/angular/angular.js" type="text/javascript"></script>
     <script src="bower_components/angular-animate/angular-animate.js" type="text/javascript"></script>
-    <script src="js/angular-material.js" type="text/javascript"></script>
+    <script src="bower_components/sopro-material/js/angular-material.js" type="text/javascript"></script>
     <script src="bower_components/japi/mocks/mockJapi.js" type="text/javascript"></script>
     <script src="bower_components/japi/js/japi.js" type="text/javascript"></script>
     <script src="js/app.js" type="text/javascript"></script>
 
     <link rel="stylesheet" type="text/css" href="assets/plugins/font-awesome-4.1.0/css/font-awesome.css">
-    <link rel="stylesheet" type="text/css" href="css/angular-material.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/sopro-material/css/angular-material.css">
 
-    <link rel="stylesheet" type="text/css" href="css/fonts.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/sopro-material-styles/sopro-material.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/roboto/2014/roboto-woff.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/sopro-material/css/sopro-material.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
   </head>
   <body unresolved ng-app="app" ng-controller="appCtrl" tabindex="-1">
